# ai-code-review

./: .acr.example.yml  .env.example  .gitignore  README.md  RESUME_PROJECT.md  pyproject.toml  requirements.txt  sample_code.py
ai_code_review/: __init__.py  cli.py  config.py  git_utils.py  llm_client.py  prompts.py  reviewer.py
ai_code_review/formatters/: __init__.py  json_fmt.py  markdown.py  terminal.py
tests/: __init__.py  test_git_utils.py  test_llm_client.py  test_reviewer.py
